Fixes step viewer overflow

--- a/src/containers/OptionView/CreateNewMap/createNewMapStyle.css
+++ b/src/containers/OptionView/CreateNewMap/createNewMapStyle.css
@@ -28,7 +28,16 @@
 }
 
 .step-viewer {
-  overflow: auto;
+  min-width: 100%;
+}
+
+.step-item {
+  flex: 1 1 auto !important;
+  flex-wrap: nowrap !important;
+}
+
+.ui.steps .step .title {
+  white-space: nowrap !important;
 }
 
 .region-select-tool {
@@ -56,6 +65,8 @@
 
 .region-select-image-container {
   padding: 12px;
+  display: flex;
+  justify-content: center;
 }
 
 .region-select-image-placeholder {
@@ -65,6 +76,9 @@
   vertical-align: middle;
   display: table-cell;
   font-family: 'Roboto';
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .factor-table {
